examples/test/testpolicy5554.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5554
  namespace: namespace80
spec:
  podSelector:
    matchLabels:
      key14: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value3
          key23: value44
          key16: value22
      podSelector:
        matchLabels:
          key10: value43
